lodrom/build/log/idf_py_stderr_output_623089
In file included from /home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:1:
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c: In function 'send_post_request':
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:290:27: error: format '%d' expects argument of type 'int', but argument 7 has type 'int64_t' {aka 'long long int'} [-Werror=format=]
  290 | #define LOG_COLOR(COLOR)  "\033[0;" COLOR "m"
      |                           ^~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:293:27: note: in expansion of macro 'LOG_COLOR'
  293 | #define LOG_COLOR_E       LOG_COLOR(LOG_COLOR_RED)
      |                           ^~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:307:37: note: in expansion of macro 'LOG_COLOR_E'
  307 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:435:86: note: in expansion of macro 'LOG_FORMAT'
  435 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:463:41: note: in expansion of macro 'ESP_LOG_LEVEL'
  463 |         if ( LOG_LOCAL_LEVEL >= level ) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                         ^~~~~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:367:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  367 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:52:9: note: in expansion of macro 'ESP_LOGI'
   52 |         ESP_LOGI(TAG, "HTTPS POST Status = %d, Response Length = %d",
      |         ^~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:290:27: error: format '%d' expects argument of type 'int', but argument 7 has type 'int64_t' {aka 'long long int'} [-Werror=format=]
  290 | #define LOG_COLOR(COLOR)  "\033[0;" COLOR "m"
      |                           ^~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:294:27: note: in expansion of macro 'LOG_COLOR'
  294 | #define LOG_COLOR_W       LOG_COLOR(LOG_COLOR_BROWN)
      |                           ^~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:307:37: note: in expansion of macro 'LOG_COLOR_W'
  307 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:436:86: note: in expansion of macro 'LOG_FORMAT'
  436 |         else if (level==ESP_LOG_WARN )      { esp_log_write(ESP_LOG_WARN,       tag, LOG_FORMAT(W, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:463:41: note: in expansion of macro 'ESP_LOG_LEVEL'
  463 |         if ( LOG_LOCAL_LEVEL >= level ) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                         ^~~~~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:367:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  367 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:52:9: note: in expansion of macro 'ESP_LOGI'
   52 |         ESP_LOGI(TAG, "HTTPS POST Status = %d, Response Length = %d",
      |         ^~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:54:1: error: format '%d' expects argument of type 'int', but argument 7 has type 'int64_t' {aka 'long long int'} [-Werror=format=]
   54 |                  esp_http_client_get_content_length(client));
      | ^          
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:307:59: note: in definition of macro 'LOG_FORMAT'
  307 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                                           ^~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:463:41: note: in expansion of macro 'ESP_LOG_LEVEL'
  463 |         if ( LOG_LOCAL_LEVEL >= level ) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                         ^~~~~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:367:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  367 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:52:9: note: in expansion of macro 'ESP_LOGI'
   52 |         ESP_LOGI(TAG, "HTTPS POST Status = %d, Response Length = %d",
      |         ^~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:54:1: error: format '%d' expects argument of type 'int', but argument 7 has type 'int64_t' {aka 'long long int'} [-Werror=format=]
   54 |                  esp_http_client_get_content_length(client));
      | ^          
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:307:59: note: in definition of macro 'LOG_FORMAT'
  307 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                                           ^~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:463:41: note: in expansion of macro 'ESP_LOG_LEVEL'
  463 |         if ( LOG_LOCAL_LEVEL >= level ) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                         ^~~~~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:367:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  367 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:52:9: note: in expansion of macro 'ESP_LOGI'
   52 |         ESP_LOGI(TAG, "HTTPS POST Status = %d, Response Length = %d",
      |         ^~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:290:27: error: format '%d' expects argument of type 'int', but argument 7 has type 'int64_t' {aka 'long long int'} [-Werror=format=]
  290 | #define LOG_COLOR(COLOR)  "\033[0;" COLOR "m"
      |                           ^~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:295:27: note: in expansion of macro 'LOG_COLOR'
  295 | #define LOG_COLOR_I       LOG_COLOR(LOG_COLOR_GREEN)
      |                           ^~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:307:37: note: in expansion of macro 'LOG_COLOR_I'
  307 | #define LOG_FORMAT(letter, format)  LOG_COLOR_ ## letter #letter " (%" PRIu32 ") %s: " format LOG_RESET_COLOR "\n"
      |                                     ^~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:439:86: note: in expansion of macro 'LOG_FORMAT'
  439 |         else                                { esp_log_write(ESP_LOG_INFO,       tag, LOG_FORMAT(I, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                      ^~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:463:41: note: in expansion of macro 'ESP_LOG_LEVEL'
  463 |         if ( LOG_LOCAL_LEVEL >= level ) ESP_LOG_LEVEL(level, tag, format, ##__VA_ARGS__); \
      |                                         ^~~~~~~~~~~~~
/home/betelgeuse/appdata/esp/esp-adf/esp-idf/components/log/include/esp_log.h:367:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  367 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/betelgeuse/projects/puc/lodrom/lodrom-hardware/lodrom/main/lodrom_api.c:52:9: note: in expansion of macro 'ESP_LOGI'
   52 |         ESP_LOGI(TAG, "HTTPS POST Status = %d, Response Length = %d",
      |         ^~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:146: esp-idf/main/CMakeFiles/__idf_main.dir/lodrom_api.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6207: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
